syntax = "proto3";

package pbflow;

import 'google/protobuf/timestamp.proto';

option go_package = "./pbflow";

service Collector {
  // Sends a greeting
  rpc Send(Records) returns (CollectorReply) {}
}

service StreamedCollector {
  rpc Send(stream Record) returns (CollectorReply) {}
}

// intentionally empty
message CollectorReply {}

message Records {
  repeated Record entries = 1;
}

message Record {
  // protocol as defined by ETH_P_* in linux/if_ether.h
  // https://github.com/torvalds/linux/blob/master/include/uapi/linux/if_ether.h
  uint32 eth_protocol = 1;
  Direction direction = 2;
  google.protobuf.Timestamp time_flow_start = 3;
  google.protobuf.Timestamp time_flow_end = 4;

  // OSI-layer attributes
  DataLink data_link = 5;
  Network network = 6;
  Transport transport = 7;

  uint64 bytes = 8;
  uint64 packets = 9;
}

message DataLink {
  uint64 src_mac = 1;
  uint64 dst_mac = 2;
}

message Network {
  IP src_addr = 1;
  IP dst_addr = 2;
}

message IP {
  oneof ip_family {
    fixed32 ipv4 = 1;
    bytes ipv6 = 2;
  }
}

message Transport {
  uint32 src_port = 1;
  uint32 dst_port = 2;
  // protocol as defined by IPPROTO_* in linux/in.h
  // https://github.com/torvalds/linux/blob/master/include/uapi/linux/in.h
  uint32 protocol = 3;
}

// as defined by field 61 in
// https://www.iana.org/assignments/ipfix/ipfix.xhtml
enum Direction {
  INGRESS = 0;
  EGRESS = 1;
}
